Fix zoom/panning and adjustement of the color scale

--- a/d3_test.html
+++ b/d3_test.html
@@ -8,6 +8,7 @@
   <script src="https://unpkg.com/d3-simple-slider"></script>
 </head>
 <body>
+  <h1>Difference of temperature by country</h1>
   <svg id="map"></svg>
   <h2>Year</h2>
   <div class="row align-items-center">
