Removing antartica and adjusting the position of the map

--- a/d3_test.html
+++ b/d3_test.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en-us">
 <head>
   <title>RealTime Visualisation</title>
   <meta charset="utf-8"><script src="https://d3js.org/d3.v5.min.js"></script>
