Test ajout graph

--- a/map_viz.html
+++ b/map_viz.html
@@ -17,6 +17,9 @@
     <div class="col-sm-2"><p id="value-time"></p></div>
     <div class="col-sm"><div id="slider-time"></div></div>
   </div>
+  <a href="./graph_viz.html">
+    <button> See Graphs </button>
+  </a>
   <script src="map.js"></script>
 </body>
 </html>
