--- a/map_city_viz.html
+++ b/map_city_viz.html
@@ -21,12 +21,11 @@
         Standard deviation
     </label>
 </div>
+<h2 class="col-sm-2">Year <p id="value-time"></p></h2>
 <svg id="map"></svg>
 <p>City : <span id="city"></span></p>
 <p> Temperature : <span id="hint"></span></p>
-<h2>Year </h2>
 <div class="row align-items-center">
-    <div class="col-sm-2"><p id="value-time"></p></div>
     <div class="col-sm"><div id="slider-time"></div></div>
 </div>
 <a href="./graph_viz.html">
