--- a/map_viz.html
+++ b/map_viz.html
@@ -20,12 +20,13 @@
     </form>
 
   </div>
+  <h2 class="col-sm-2">Year <p id="value-time"></p></h2>
   <svg id="map"></svg>
   <p>Country : <span id="country"></span></p>
   <p> Temperature : <span id="hint"></span></p>
-  <h2>Year</h2>
+
   <div class="row align-items-center">
-    <div class="col-sm-2"><p id="value-time"></p></div>
+
     <div class="col-sm"><div id="slider-time"></div></div>
   </div>
   <a href="./graph_viz.html">
