--- a/map_city_viz.html
+++ b/map_city_viz.html
@@ -21,8 +21,12 @@
         Standard deviation
     </label>
 </div>
-<h2 class="col-sm-2">Year <p id="value-time"></p></h2>
-<svg id="map"></svg>
+<h2 class="col-sm-2"><p id="value-time"></p></h2>
+<div class='parent'>
+    <svg class='float-left-child' id="map"></svg>
+    <div class='float-left-child' id="legend1"></div>
+</div>
+
 <p>City : <span id="city"></span></p>
 <p> Temperature : <span id="hint"></span></p>
 <div class="row align-items-center">
