--- a/map_viz.html
+++ b/map_viz.html
@@ -20,7 +20,7 @@
     </form>
 
   </div>
-  <h2 class="col-sm-2">Year <p id="value-time"></p></h2>
+  <h2 class="col-sm-2"> <p id="value-time"></p></h2>
   <svg id="map"></svg>
   <p>Country : <span id="country"></span></p>
   <p> Temperature : <span id="hint"></span></p>
