--- a/map_viz.html
+++ b/map_viz.html
@@ -22,6 +22,7 @@
   </div>
   <h2 class="col-sm-2"> <p id="value-time"></p></h2>
   <svg id="map"></svg>
+  <div class='float-left-child' id="legend1"></div>
   <p>Country : <span id="country"></span></p>
   <p> Temperature : <span id="hint"></span></p>
 
