--- a/map_city_viz.html
+++ b/map_city_viz.html
@@ -22,11 +22,10 @@
     </label>
 </div>
 <h2 class="col-sm-2"><p id="value-time"></p></h2>
-<div class='parent'>
-    <svg class='float-left-child' id="map"></svg>
-    <div class='float-left-child' id="legend1"></div>
+<div class='float-left-child'>
+        <svg id="map"></svg>
 </div>
-
+<div class='float-left-child' id="legend1"></div>
 <p>City : <span id="city"></span></p>
 <p> Temperature : <span id="hint"></span></p>
 <div class="row align-items-center">
