--- a/map_city_viz.html
+++ b/map_city_viz.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1>Impact of climate change on countries temperature</h1>
+<h1>Impact of climate change on cities temperature</h1>
 <div>
     <input type="radio" id="Mean" name="mode" value="Mean"
            onclick="change_radio()">
@@ -22,9 +22,9 @@
     </label>
 </div>
 <h2 class="col-sm-2"><p id="value-time"></p></h2>
-<div class='float-left-child'>
-        <svg id="map"></svg>
-</div>
+
+<svg id="map"></svg>
+
 <div class='float-left-child' id="legend1"></div>
 <p>City : <span id="city"></span></p>
 <p> Temperature : <span id="hint"></span></p>
