--- a/graph_viz.html
+++ b/graph_viz.html
@@ -6,18 +6,25 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Graphs </h1>
+    <h1 class="title">Graphs </h1>
     <div>
         <form>
             <input type="radio" id="Mean" name="mode" value="Mean"
                onclick="change_radio()">
-            <label for="Mean">Average by year</label>
+            <label class="text" for="Mean">Average by year</label>
             <input type="radio" id="Deviation" name="mode" value="Deviation" onclick="change_radio()" checked>
-            <label for="Deviation">Standard deviation</label>
+            <label class="text" for="Deviation">Standard deviation</label>
         </form>
     </div>
-    <select id="selectButton" onfocus='this.size=10;' onblur='this.size=1;' onchange='this.size=1; this.blur();'></select>
-    <div id="graph"></div>
+    <div class="row">
+        <div class="column1" align="center">
+            <div id="graph"></div>
+        </div>
+        <div class="column2">
+            <select id="selectButton" class="selecttool" onfocus='this.size=10;' onblur='this.size=1;' onchange='this.size=1; this.blur();'></select>
+         </div>
+    </div>
+    <br>
     <a href="./map_city_viz.html">
         <button class="button-4"> See map for cities </button>
     </a>
