--- a/map_city_viz.html
+++ b/map_city_viz.html
@@ -8,8 +8,9 @@
     <script src="https://unpkg.com/d3-simple-slider"></script>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-<h1>Impact of climate change on cities temperature</h1>
+<h1 class="title">Impact of climate change on cities temperature</h1>
 <div>
     <input type="radio" id="Mean" name="mode" value="Mean"
            onclick="change_radio()">
@@ -21,16 +22,25 @@
         Standard deviation
     </label>
 </div>
-<h2 class="col-sm-2"><p id="value-time"></p></h2>
+<div class="row">
+    <div class="column1" align="center">
+        <h2 class="text"> <p id="value-time"></p></h2>
+        <div id="rectangle" style="background: lightgrey">
+            <svg id="map"></svg>
+        </div>
+        <div id="slider-time"></div>
+    </div>
+    <div class="column2" align="left">
+        <br>
+        <p class="text" style="position: absolute">City : <span id="city"></span></span></p>
 
-<svg id="map"></svg>
+        <p class="text" style="position: absolute; margin-top: 100px">
+            Temperature : <span id="hint"></span></p>
 
-<div class='float-left-child' id="legend1"></div>
-<p>City : <span id="city"></span></p>
-<p> Temperature : <span id="hint"></span></p>
-<div class="row align-items-center">
-    <div class="col-sm"><div id="slider-time"></div></div>
+        <div class='float-left-child' id="legend1"></div>
+    </div>
 </div>
+
 <a href="./graph_viz.html">
     <button class="button-4"> See Graphs </button>
 </a>
