--- a/graph_viz.html
+++ b/graph_viz.html
@@ -21,7 +21,7 @@
             <div id="graph"></div>
         </div>
         <div class="column2">
-            <select id="selectButton" class="selecttool" onfocus='this.size=10;' onblur='this.size=1;' onchange='this.size=1; this.blur();'></select>
+            <select id="selectButton" class="selectTool" onfocus='this.size=10;' onblur='this.size=1;' onchange='this.size=1; this.blur();'></select>
          </div>
     </div>
     <br>
