final push (if everything is fine)

--- a/bin/graph_viz.html
+++ b/bin/graph_viz.html
@@ -4,6 +4,7 @@
     <title>RealTime Visualisation</title>
     <meta charset="utf-8"><script src="https://d3js.org/d3.v5.min.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="../html_ressources/world_icon.png" sizes="32x32" type="image/png">
 </head>
 <body>
     <h1 class="title">Graphs </h1>
@@ -25,10 +26,10 @@
          </div>
     </div>
     <br>
-    <a href="./map_city_viz.html">
+    <a href="map_city_viz.html">
         <button class="button-4"> See map for cities </button>
     </a>
-    <a href="./map_viz.html">
+    <a href="map_viz.html">
         <button class="button-4"> See for countries </button>
     </a>
     <script src="graph.js"></script>
