--- a/bin/map_city_viz.html
+++ b/bin/map_city_viz.html
@@ -7,6 +7,7 @@
     <script src="https://rawgit.com/susielu/d3-annotation/master/d3-annotation.min.js"></script>
     <script src="https://unpkg.com/d3-simple-slider"></script>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="../html_ressources/world_icon.png" sizes="32x32" type="image/png">
 </head>
 
 <body>
@@ -41,10 +42,10 @@
     </div>
 </div>
 
-<a href="./graph_viz.html">
+<a href="graph_viz.html">
     <button class="button-4"> See Graphs </button>
 </a>
-<a href="./map_viz.html">
+<a href="map_viz.html">
     <button class="button-4"> See for countries </button>
 </a>
 <script src="map_city.js"></script>
