--- a/bin/map_viz.html
+++ b/bin/map_viz.html
@@ -8,6 +8,7 @@
   <script src="https://rawgit.com/susielu/d3-annotation/master/d3-annotation.min.js"></script>
   <script src="https://unpkg.com/d3-simple-slider"></script>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" href="../html_ressources/world_icon.png" sizes="32x32" type="image/png">
 </head>
 <body>
   <h1 class="title">Impact of climate change on countries temperature </h1>
@@ -40,10 +41,10 @@
     </div>
   </div>
 
-  <a href="./graph_viz.html">
+  <a href="graph_viz.html">
     <button class="button-4"> See Graphs </button>
   </a>
-  <a href="./map_city_viz.html">
+  <a href="map_city_viz.html">
     <button class="button-4"> See for cities </button>
   </a>
   <script src="map.js"></script>
